# TMC-EvalSystem

./: .gitmodules  CMakeLists.txt  main.c
boards/: MAX22204_eval.c  MAX22210_eval.c  MAX22216_eval.c  SelfTest_Zephyr.c  TMC2100_eval.c  TMC2130_eval.c  TMC2160_eval.c  TMC2208_eval.c  TMC2210_eval.c  TMC2224_eval.c  TMC2225_eval.c  TMC2240_eval.c  TMC2300_eval.c  TMC2660_eval.c  TMC4361A_eval.c  TMC4671_eval.c  TMC4671_eval.h  TMC5031_eval.c  TMC5041_eval.c  TMC5062_eval.c  TMC5072_eval.c  TMC5130_eval.c  TMC5160_eval.c  TMC5240_eval.c  TMC5271_eval.c  TMC5272_eval.c  TMC6100_eval.c  TMC6140_eval.c  TMC6200_eval.c  TMC6300_eval.c  TMC7300_eval.c  TMC8461_eval.c  TMC8462_eval.c  TMCDriver.c  TMCMotionController.c
hal/: IOs.h  LEDs.h  SPI.h  Timer.h  derivative.h
hal/Zephyr/tmc/: ADCs.c  HAL.c  IOMap.c  IOs.c  LEDs.c  RS232.c  RXTX.c  SPI.c  SysTick.c  Timer.c  UART.c  USB.c  WLAN.c
tmc/: BLDC_Zephyr.c  BoardAssignment.h  StepDir.c  TMCL.c  VitalSignsMonitor.c
